# pydejavu

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-package-pypi.yml  python-package.yml
docs/: ADVANCED_USAGE.md  ENVIRONMENT_SETUP.md
examples/cli/: CLI_EXMPALE.md  sample.pqtl  sample.qtl
examples/pydejavu_monitor/: compile_monitor_from_scala_example.py  init_monitor_from_spec_example.py  linkage_exist_monitor_example.py  monitor_for_detecting_suspicious_login_patterns.py  monitor_using_vector_example.py  monitor_with_inline_events.py  monitor_with_no_handlers.py  monitor_with_register_to_custom_event_parser.py  monitor_with_register_to_custom_event_parser_with_event_handler.py  monitor_with_register_to_custom_event_parser_without_event_handler.py
examples/pydejavu_traces/: simple_trace_1  simple_trace_2  simple_trace_3
experiments/example_1/: example_1_no_pre_eval.py  example_1_pre_eval.py  log_100K.csv  log_10K.csv  run_experiment  tpdejavu_example_1.pqtl  trace_generator.py
experiments/example_2/: example_2_no_pre_eval.py  example_2_pre_eval.py  log_100K.csv  log_10K.csv  run_experiment  tpdejavu_example_2.pqtl
experiments/example_3/: example_3_no_pre_eval.py  example_3_pre_eval.py  log_100K.csv  log_10K.csv  run_experiment  tpdejavu_example_3.pqtl  trace_generator.py
experiments/example_4/: example_4_no_pre_eval.py  example_4_pre_eval.py  log_100K.csv  log_10K.csv  log_500K.csv  run_experiment  trace_generator.py
extra/dejavu_src/: Ast.scala  Monitor.scala  PreParser.scala  Verify.scala
pydejavu/: __main__.py
pydejavu/compilation/: scala_monitor_compiler.py  spec_parser_synthesizer.py
pydejavu/core/: event_operational_mapper.py  monitor.py  shared_state.py  verify.py
pydejavu/jni/: jni_config.py  linkage_monitor.py
pydejavu/utils/: benchmark_util.py  file_utils.py  files_utils.py  logger.py  monitor_generator.py
tests/: test_end_to_end_scenarios.py  test_operational_phase.py
